<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_shoppingcart"
            android:icon="@drawable/ic_menu_shoppingcart"
            android:title="@string/menu_shopping_cart" />
        <item
            android:id="@+id/nav_saveditems"
            android:icon="@drawable/heart_unchecked"
            android:title="@string/menu_saveditems" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_menu_photos"
            android:title="@string/menu_upload" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_myaccount"
            android:title="@string/menu_account" />
    </group>

</menu>
